--- a/Tarea3_0/nbproject/project.properties
+++ b/Tarea3_0/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Tarea3_0
-main.class=tarea3_0.Tarea3_0
+main.class=tarea3_0.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
